# amr-maldi-tof-prediction

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: baseline.yaml
data/: README.md
docs/: 01_problem_and_data.md  02_eda_findings.md  03_methodology.md  04_results_and_lessons.md  COURSE_METHODS_REFERENCE.md  EDA_CONCLUSIONS_STRATEGY.md  README.md
docs/insights/: data_insights.md  eda_phase1_data_profiling.md  eda_phase2_feature_analysis.md  eda_phase3_SUMMARY.md  eda_phase3_target_analysis.md  eda_phase4_species_analysis.md  eda_phase5_dimensionality.md  eda_phase6_train_test_distribution.md  eda_phase7_feature_target.md  eda_phase8_biological_analysis.md
docs/research/: amr_biology.md  maldi_tof.md  ml_sota.md
docs/submissions/: submissions_log.md  submissions_tracker.csv
experiments/: README.md  controlled_experiment.py  ensemble_utils.py  evaluate_blends.py  reproduce_holdout_eval.py  run_mega_blend.py  run_miracle_v2.py  run_phase1.py  run_self_training.py  run_species_specific.py  transductive_base.py
experiments/archive/: README.md  blend_all.py  final_blend_candidates.py  run_all_experiments.py  run_antibiotic_conditioned_mlp.py  run_fast_experiments.py  run_miracle.py  run_pca_mlp_self_training.py  run_phase0.py  run_phase2.py  run_phase3.py  run_phase4.py  run_phase5.5.py  (+10 more)
poster/: README.md  build.sh  main.tex  main_50x70.tex  main_beamerposter.tex  main_modernposter.tex  modernposter.cls
reports/: holdout_eval.json
scripts/: blend_submissions.py  profile_dataset_uv.py  smoke_test.py  update_leaderboard.py  verify_claims.py
(+22 files in other folders)
